[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Jaebum Lee <kev0960@gmail.com>"]

[dependencies]
async-trait = "0.1.68"
axum = "0.6.16"
chrono = "0.4.24"
dojang = { path = "../../dojang" }
dotenv = "0.15.0"
futures = "0.3.28"
google-analyticsreporting4 = "5.0.2"
hyper = "0.14.26"
hyper-rustls = { version = "0.24.0", features = ["rustls-native-certs"] }
lru = "0.10.0"
sea-orm = { version = "0.11.2", features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres", "mock", "postgres-array"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
yup-oauth2 = "8.3.0"
