[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Jaebum Lee <kev0960@gmail.com>"]

[dependencies]
async-trait = "0.1.83"
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["cookie-signed", "cookie"] }
axum-macros = "0.4.2"
chrono = "0.4.38"
dojang = { path = "../../dojang" }
dotenv = "0.15.0"
futures = "0.3.31"
google-analytics-api-ga4 = "0.1.4"
hyper = "1.5.1"
hyper-rustls = { version = "0.27.3", features = ["rustls-native-certs"] }
jsonwebtoken = "9.3.0"
lru = "0.12.5"
rand = { version = "0.8.5", features = ["min_const_gen"] }
reqwest = { version = "0.12.9", features = ["json"] }
sea-orm = { version = "1.1.1", features = [
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-postgres",
  "mock",
  "postgres-array",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
yup-oauth2 = "11.0.0"
html-escape = "0.2.13"
